--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h2 {
 h3 {
     font-size: 0.75em
 }
+.num {
+    font-size: 1em;
+    width: 3.5em;
+}
 .inline h2, h3{
     display: inline-block;
     margin: 0.75em;
