--- a/style.css
+++ b/style.css
@@ -14,6 +14,22 @@ h2 {
 h3 {
     font-size: 0.75em
 }
+h3 :hover {
+    text-decoration: underline;
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+details{
+    font-size: 1.5em;
+}
+summary {
+    font-size: 1.25em;
+}
+summary > ul {
+    font-size: 0.75em;
+}
 .num {
     font-size: 1em;
     width: 3.5em;
